# IonicSim

./: .gitignore  CMakeLists.txt
include/: App.h  EcsConfigDefault.h  MathUtilities.h  PhysicsContainer.h  PhysicsEntity.h  ScientificValues.h
src/: App.cpp  PhysicsContainer.cpp  PhysicsEntity.cpp  main.cpp
